--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title> Японская еда! Очень вкусная! </title>
         <body>
         <header>
-        <img src="" width="100" height="100"
+        <img src="img/japanese-food.jpg" width="100" height="100"
         <h1> Японская еда! </h1>
         </header>
 
