--- a/index.html
+++ b/index.html
@@ -12,10 +12,21 @@
     <p><b>Японские жители питаются исключительно натуральными продуктами </b>, в то время как в рационе статистического русского человека присутствует большое количество консервантов и полуфабрикатов.</p>
 
 <p>Присутствие национальных блюд этой страны в рационе человека приносит неоценимую пользу для здоровья: большое количество белков и медленных углеводов наполняют организм необходимой энергией, полезные жиры положительно сказываются на работе мозга, йод и железо оказывают благотворное воздействие на работу кровеносной и эндокринной систем.</p>
+<p>История кухни
+ 
+
+Самые ранние свидетельства о японской кухне восходят ко временам мезолита и неолита, когда основным рационом японцев того времени были рыба, разные виды пшена, моллюски. Еще тогда японцы пользовались горшками, в которых варились всевозможные похлебки. Известное японское блюдо сябу-сябу, которое еще называют «блюдом из одного котла», датируется как раз тем периодом. Археологи, проводившие раскопки на территории Японии отметили, что уже тогда люди использовали природные холодильники в виде глубоких ям и консервировали продукты солью.
+
+Главный продукт кухни – рис – в Японии начали возделывать в III веке до н. э., причем рис был не только продуктом питания, но и денежной единицей, мерой вознаграждения самураев до конца XIX века. Запасы риса говорили о материальной состоятельности семьи. В VI веке влияние на японскую кухню оказал Китай, были заложены основы чайной церемонии.
+
+В этот же период в страну проник буддизм, и поэтому уже в 675 году появился закон, запрещающий употребление мяса. Нарушение запрета каралось смертной казнью. Правда, сам запрет распространялся не на все виды мяса. Например, мясо диких свиней и оленей можно было продолжать есть безнаказанно. В 752 году также была запрещена и рыбалка. Рыбаки остались без работы и источника пищи. Но чтобы рыбаки не умерли от голода, императорский дом датировал их определенным количеством риса ежегодно. Палочки для еды – это не японское изобретение. Их японцы позаимствовали у китайцев, так же, как рецепт соевого соуса и лапши удон.            
+    
+            
     </main>
     <footer>
     Спасибо что выбрали нашь сайт. Желаю вам удачи.
     Нашь Ютуб канал https://youtu.be/xMeSdhYgww4.
     Пишите нам на электронную почту если есть вопросы, предложение для улутшение сайта krutovchubac@mail.ru смотрим электронку 06:30-23:00 по Москве.
-    Нашь номер подержки 568-478. Звоните мы работаем по расписанию 06:30-23:00. Удачи!</footer>
+    Нашь номер подержки 568-478. Звоните мы работаем по расписанию 06:30-23:00. Удачи!
+    </footer>
 </html>
