--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p><b>Японские жители питаются исключительно натуральными продуктами </b>, в то время как в рационе статистического русского человека присутствует большое количество консервантов и полуфабрикатов.</p>
 
 <p>Присутствие национальных блюд этой страны в рационе человека приносит неоценимую пользу для здоровья: большое количество белков и медленных углеводов наполняют организм необходимой энергией, полезные жиры положительно сказываются на работе мозга, йод и железо оказывают благотворное воздействие на работу кровеносной и эндокринной систем.</p>
-<p>История кухни.
+            <p><h2>История кухни.</h2>
  
 
 Самые ранние свидетельства о японской кухне восходят ко временам мезолита и неолита, когда основным рационом японцев того времени были рыба, разные виды пшена, моллюски. Еще тогда японцы пользовались горшками, в которых варились всевозможные похлебки. Известное японское блюдо сябу-сябу, которое еще называют «блюдом из одного котла», датируется как раз тем периодом. Археологи, проводившие раскопки на территории Японии отметили, что уже тогда люди использовали природные холодильники в виде глубоких ям и консервировали продукты солью.
