--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 
 В этот же период в страну проник буддизм, и поэтому уже в 675 году появился закон, запрещающий употребление мяса. Нарушение запрета каралось смертной казнью. Правда, сам запрет распространялся не на все виды мяса. Например, мясо диких свиней и оленей можно было продолжать есть безнаказанно. В 752 году также была запрещена и рыбалка. Рыбаки остались без работы и источника пищи. Но чтобы рыбаки не умерли от голода, императорский дом датировал их определенным количеством риса ежегодно. Палочки для еды – это не японское изобретение. Их японцы позаимствовали у китайцев, так же, как рецепт соевого соуса и лапши удон.            
 </p>
+    <p><h2>«Рис был не только продуктом питания, но и денежной единицей»</h2>
+
+С началом аристократической эпохи, начавшейся с 710 года после основания постоянной столицы в Наре, японская кухня приобретает присущие ей черты. Кушанья при императорском дворе элегантны и недосказаны, ценится утонченность и внешняя эстетика блюд, а не их изобилие. Все, что находится на тарелках, приобретает определенную символику, цвет блюд определяется сезоном и происходящими событиями.
+
+До появления первых португальцев в Японии в 1543 году сладости, как таковые, в рационе населения отсутствовали. Хоть сахар и был открыт японцами в VIII веке, он считался лекарством от болезни легких и в пищу его не употребляли. Чаще всего, сладким к чаю выступали фрукты, каштаны, мед. Все изменилось с появлением в Японии европейцев. Сладкие конфеты, карамель, печенье и леденцы – «сладости южных варваров», которыми японцев пытались склонить к христианству. Япония снова закрывается от всего мира в 1639 году и открывается Западу лишь после 1868 года. Булочные, стейк-хаусы, пивоварни, магазины с мороженым и шоколадом, кофейные и винные лавки – все это пришло в Японию и стало космически популярно среди молодых гурманов и интеллектуалов. Сыры, молоко и масло появились из-за популярности десерта чизкейк не раньше 1970-х.</p>
+
+А вот американским гамбургерам не суждено было наводнить рынок. Еще в 1958 году Андо Момофуку придумал революционную быстрорастворимую лапшу в пластиковых стаканах, которую полюбила вся Япония, и не только она. Японские традиции питания теряют актуальность в собственной стране, но вдруг японцы обнаруживают, что именно их кухня вдохновляет весь современный мир. На стажировку к японским поварам повалили желающие со всего мира. Ведь строчка в резюме о том, что ты прошел обучение у японского шеф-повара повышает твою конкурентоспособность.
             
     </main>
     <footer>
