--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
         <body>
         <header>
         <img src="img/japanese-food.jpg" width="600" height="400"
-        <h1> Японская еда! </h1>
+             <p><h1> Японская еда! </h1></p>
         </header>
 
         <main>
-        <h1>Польза и вред японской кухни</h1>
+        <h2>Польза и вред японской кухни</h2>
     
     <p><b>Японские жители питаются исключительно натуральными продуктами </b>, в то время как в рационе статистического русского человека присутствует большое количество консервантов и полуфабрикатов.</p>
 
