--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title> Японская еда! Очень вкусная! </title>
         <body>
         <header>
-        <img src="img/japanese-food.jpg" width="600" height="400"
+        <img src="img/japanese-food.jpg" width="600" height="400">
              <p><h1> Японская еда! </h1></p>
         </header>
 
