--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>Присутствие национальных блюд этой страны в рационе человека приносит неоценимую пользу для здоровья: большое количество белков и медленных углеводов наполняют организм необходимой энергией, полезные жиры положительно сказываются на работе мозга, йод и железо оказывают благотворное воздействие на работу кровеносной и эндокринной систем.</p>
             <p><h2>История кухни.</h2>
             
-        <img src="img/EDA.jpg" width="400" height="200></p>
+        <img src="img/EDA.jpg" width="400" height="200"</p>
 
 <p>Самые ранние свидетельства о японской кухне восходят ко временам мезолита и неолита, когда основным рационом японцев того времени были рыба, разные виды пшена, моллюски. Еще тогда японцы пользовались горшками, в которых варились всевозможные похлебки. Известное японское блюдо сябу-сябу, которое еще называют «блюдом из одного котла», датируется как раз тем периодом. Археологи, проводившие раскопки на территории Японии отметили, что уже тогда люди использовали природные холодильники в виде глубоких ям и консервировали продукты солью.</p>
 
